[package]
name = "dry-run-runtime-upgrade-cli"
version = "2.0.0"
authors = ["kianenigma <kian.peymani@gmail.com>"]
edition = "2018"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
sc-service = { git = "https://github.com/paritytech/substrate", tag = "v2.0.1" }
sc-cli = { git = "https://github.com/paritytech/substrate", tag = "v2.0.1" }
sc-executor = { git = "https://github.com/paritytech/substrate", tag = "v2.0.1" }
sc-client-api = { git = "https://github.com/paritytech/substrate", tag = "v2.0.1" }
structopt = "0.3.8"
sp-state-machine = { path = "../state-machine" }
sp-api = { git = "https://github.com/paritytech/substrate", tag = "v2.0.1" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", tag = "v2.0.1" }
sp-runtime = { git = "https://github.com/paritytech/substrate", tag = "v2.0.1" }
sp-externalities = { git = "https://github.com/paritytech/substrate", tag = "v2.0.1" }
sp-core = { git = "https://github.com/paritytech/substrate", tag = "v2.0.1" }

dry-run-runtime-upgrade-api = { path = "../api" }
remote-externalities = { path = "../remote-externalities" }
