[package]
name = "remote-externalities"
version = "0.1.0"
authors = ["kianenigma <kian.peymani@gmail.com>"]
edition = "2018"

[dependencies]
jsonrpsee-types = { git = "https://github.com/paritytech/jsonrpsee", rev = "7dc9435e225bcc1887a2532e830266d7b1ecd0af" }
jsonrpsee-http-client = { git = "https://github.com/paritytech/jsonrpsee", rev = "7dc9435e225bcc1887a2532e830266d7b1ecd0af" }
jsonrpsee-ws-client = { path = "../ws-client" }

hex-literal = "0.3.1"
env_logger = "0.8.2"
log = "0.4.11"
bincode = "1.3.1"

sp-io = { version = "2.0.1" }
sp-core = { version = "2.0.1" }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[features]
remote-test-kusama = []
remote-test-polkadot = []
