[package]
name = "sp-state-machine"
version = "0.8.1"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Substrate State Machine"
edition = "2018"
license = "Apache-2.0"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"
documentation = "https://docs.rs/sp-state-machine"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
log = { version = "0.4.11", optional = true }
thiserror = { version = "1.0.21", optional = true }
parking_lot = { version = "0.11.0", optional = true }
hash-db = { version = "0.15.2", default-features = false }
trie-db = { version = "0.22.2", default-features = false }
trie-root = { version = "0.16.0", default-features = false }
sp-trie = { git = "https://github.com/paritytech/substrate", tag = "v2.0.1", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate", tag = "v2.0.1", default-features = false }
sp-panic-handler = { git = "https://github.com/paritytech/substrate", tag = "v2.0.1", optional = true }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
num-traits = { version = "0.2.8", default-features = false }
rand = { version = "0.7.2", optional = true }
sp-externalities = { git = "https://github.com/paritytech/substrate", tag = "v2.0.1", default-features = false }
smallvec = "1.4.1"
sp-std = { git = "https://github.com/paritytech/substrate", tag = "v2.0.1" }

[dev-dependencies]
hex-literal = "0.3.1"
sp-runtime = { git = "https://github.com/paritytech/substrate", tag = "v2.0.1" }
pretty_assertions = "0.6.1"

[features]
default = ["std"]
std = [
	"codec/std",
	"hash-db/std",
	"num-traits/std",
	"sp-core/std",
	"sp-externalities/std",
	"sp-std/std",
	"sp-trie/std",
	"trie-db/std",
	"trie-root/std",
	"log",
	"thiserror",
	"parking_lot",
	"rand",
	"sp-panic-handler",
]
