[package]
name = "jsonrpsee-ws-client"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>", "Pierre Krieger <pierre.krieger1708@gmail.com>"]
description = "WebSocket client for JSON-RPC"
edition = "2018"
license = "MIT"

[dependencies]
async-std = { version = "1.8", features = ["attributes"] }
async-tls = "0.11"
fnv = "1"
futures = "0.3"
jsonrpsee-types = { git = "https://github.com/paritytech/jsonrpsee", rev = "7dc9435e225bcc1887a2532e830266d7b1ecd0af" }
log = "0.4"
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = "1"
soketto = "0.4"
pin-project = "1"
thiserror = "1"
url = "2"
webpki = "0.21"

[dev-dependencies]
jsonrpsee-test-utils = { git = "https://github.com/paritytech/jsonrpsee", rev = "7dc9435e225bcc1887a2532e830266d7b1ecd0af" }
tokio = { version = "1", features = ["full"] }
