[package]
name = "pallet-asset"
version = "0.1.0"
authors = ["Polymath"]
edition = "2018"

[dependencies]
# Common
polymesh-primitives = { path = "../../primitives", default-features = false }
polymesh-primitives-derive = { path = "../../primitives_derive", default-features = false }
polymesh-common-utilities = { path = "../common", default-features = false }

# Our Pallets
pallet-balances = { path = "../balances", default-features = false  }
pallet-contracts = { git = "https://github.com/paritytech/substrate", rev = "3f1341a384559ec046710e2f46eb4a7d9fc52f50", default-features = false }
pallet-identity = { path = "../identity", default-features = false }
pallet-portfolio = { path = "../portfolio", default-features = false }
pallet-statistics = { path = "../statistics", default-features = false }

# Other
serde = { version = "1.0.104", default-features = false }
serde_derive = { version = "1.0.104", optional = true, default-features = false }
serde_json = "1.0.48"
rustc-hex = { version = "2.1.0", default-features = false }
hex-literal = "0.2.1"
arrayvec = { version = "0.5.1", default-features = false }

# Substrate
codec = { package = "parity-scale-codec", version = "1.1.0", default-features = false, features = ["derive"] }
sp-arithmetic = { git = "https://github.com/paritytech/substrate", default-features = false, rev = "3f1341a384559ec046710e2f46eb4a7d9fc52f50" }
sp-core = { git = "https://github.com/paritytech/substrate", default-features = false, rev = "3f1341a384559ec046710e2f46eb4a7d9fc52f50" }
sp-std = { git = "https://github.com/paritytech/substrate", default-features = false, rev = "3f1341a384559ec046710e2f46eb4a7d9fc52f50" }
sp-io = { git = "https://github.com/paritytech/substrate", default-features = false, rev = "3f1341a384559ec046710e2f46eb4a7d9fc52f50" }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, rev = "3f1341a384559ec046710e2f46eb4a7d9fc52f50" }
sp-version = { git = "https://github.com/paritytech/substrate", default-features = false, rev = "3f1341a384559ec046710e2f46eb4a7d9fc52f50" }
sp-api = { git = "https://github.com/paritytech/substrate", default-features = false, rev = "3f1341a384559ec046710e2f46eb4a7d9fc52f50" }
frame-system = { git = "https://github.com/paritytech/substrate", default-features = false, rev = "3f1341a384559ec046710e2f46eb4a7d9fc52f50" }
frame-support = { git = "https://github.com/paritytech/substrate", default-features = false, rev = "3f1341a384559ec046710e2f46eb4a7d9fc52f50" }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", default-features = false, rev = "3f1341a384559ec046710e2f46eb4a7d9fc52f50" }
pallet-session = { git = "https://github.com/paritytech/substrate", default-features = false, rev = "3f1341a384559ec046710e2f46eb4a7d9fc52f50" }
libsecp256k1 = { version = "0.3.5", default-features = false, features = ["hmac"] }

# Only in STD
frame-benchmarking = { default-features = false, git = "https://github.com/paritytech/substrate", rev = "3f1341a384559ec046710e2f46eb4a7d9fc52f50", optional = true }

[features]
equalize = []
default = ["std", "equalize", "runtime-benchmarks"]
no_std = []
only-staking = []
std = [
    "codec/std",
    "frame-support/std",
    "frame-system/std",
    "pallet-balances/std",
    "pallet-contracts/std",
    "pallet-portfolio/std",
    "pallet-session/std",
    "pallet-timestamp/std",
    "polymesh-common-utilities/std",
    "polymesh-primitives/std",
    "rustc-hex/std",
    "serde/std",
    "serde_derive",
    "sp-api/std",
    "sp-core/std",
    "sp-io/std",
    "sp-runtime/std",
    "sp-std/std",
    "sp-version/std",
]
runtime-benchmarks = [
    "frame-benchmarking",
]
