[package]
name = "pallet-asset"
version = "0.1.0"
authors = ["Polymath"]
edition = "2021"

[dependencies]
# Common
polymesh-primitives = { path = "../../primitives", default-features = false }
polymesh-primitives-derive = { path = "../../primitives_derive", default-features = false }
polymesh-common-utilities = { path = "../common", default-features = false }

# Our Pallets
pallet-balances = { path = "../balances", default-features = false  }
pallet-base = { path = "../base", default-features = false  }
pallet-external-agents = { path = "../external-agents", default-features = false }
pallet-identity = { path = "../identity", default-features = false }
pallet-permissions = { path = "../permissions", default-features = false }
pallet-portfolio = { path = "../portfolio", default-features = false }
pallet-statistics = { path = "../statistics", default-features = false }

# Other
serde = { version = "1.0.104", default-features = false }
serde_derive = { version = "1.0.104", optional = true, default-features = false }
serde_json = "1.0.48"
rustc-hex = { version = "2.1.0", default-features = false }
hex-literal = "0.2.1"
arrayvec = { version = "0.7.1", default-features = false }

# Substrate
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
scale-info = { version = "2.0", default-features = false, features = ["derive"] }
sp-arithmetic = { version = "6.0.0", default-features = false }
sp-core = { version = "7.0.0", default-features = false }
sp-std = { version = "5.0.0", default-features = false }
sp-io = { version = "7.0.0", default-features = false }
sp-runtime = { version = "7.0.0", default-features = false }
sp-version = { version = "5.0.0", default-features = false }
sp-api = { version = "4.0.0-dev", default-features = false }
frame-system = { version = "4.0.0-dev", default-features = false }
frame-support = { version = "4.0.0-dev", default-features = false }
pallet-timestamp = { version = "4.0.0-dev", default-features = false }
pallet-session = { version = "4.0.0-dev", default-features = false }
libsecp256k1 = { version = "0.7", default-features = false }

# Only in STD
frame-benchmarking = { version = "4.0.0-dev", default-features = false, optional = true }

[features]
default = ["std"]
no_std = []
std = [
    "codec/std",
    "frame-support/std",
    "frame-system/std",
    "pallet-base/std",
    "pallet-balances/std",
    "pallet-identity/std",
    #"polymesh-contracts/std",
    #"pallet-contracts/std",
    "pallet-portfolio/std",
    "pallet-session/std",
    "pallet-timestamp/std",
    "polymesh-common-utilities/std",
    "polymesh-primitives/std",
    "rustc-hex/std",
    "serde/std",
    "serde_derive",
    "sp-api/std",
    "sp-core/std",
    "sp-io/std",
    "sp-runtime/std",
    "sp-std/std",
    "sp-version/std",
    "sp-arithmetic/std"
]
runtime-benchmarks = [
    "frame-benchmarking",
    "polymesh-common-utilities/runtime-benchmarks",
    "pallet-identity/runtime-benchmarks",
]
